--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,9 @@ distlib==0.3.6
 distro==1.4.0
 distro-info===0.23ubuntu1
 Django==4.2.1
+djangorestframework==3.14.0
 docutils==0.16
+drf-writable-nested==0.7.0
 duplicity==0.8.12.0
 entrypoints==0.3
 et-xmlfile==1.0.1
