--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,182 @@
-aioredis==1.3.1
-asgiref==3.2.10
-async-timeout==3.0.1
-attrs==20.1.0
-autobahn==20.7.1
-Automat==20.2.0
-bootstrap-admin==0.4.4
-boto==2.49.0
-boto3==1.14.43
-botocore==1.17.43
-django-authority==0.14
-django-phonenumber-field==5.2.0
-mccabe==0.6.1
-phonenumbers==8.12.26
-pycodestyle==2.6.0
-pyflakes==2.2.0
-certifi==2020.6.20
-cffi==1.14.2
-channels==2.4.0
-channels-redis==3.0.1
+appdirs==1.4.4
+apturl==0.5.2
+asciitree==0.3.3
+asgiref==3.7.2
+atomicwrites==1.1.5
+attrs==19.3.0
+awscli==1.18.69
+backcall==0.1.0
+backports.zoneinfo==0.2.1
+bcrypt==3.1.7
+beautifulsoup4==4.8.2
+blinker==1.4
+blosc==1.7.0
+botocore==1.16.19
+Bottleneck==1.2.1
+Brlapi==0.7.0
+cachetools==4.2.2
+certifi==2019.11.28
+cftime==1.1.0
 chardet==3.0.4
-click==7.1.2
-constantly==15.1.0
-cryptography==3.0
-daphne==2.5.0
-defusedxml==0.6.0
-dj-database-url==0.5.0
-Django==3.1
-django-appconf==1.0.4
-django-colorfield==0.3.2
-django-cors-headers==3.4.0
-django-extensions==3.0.8
-django-heroku==0.3.1
-django-ipware==3.0.1
-django-storages==1.9.1
-djangorestframework==3.11.1
-docutils==0.15.2
-drf-recaptcha==2.0.3
-h11==0.9.0
-h2==3.2.0
-hiredis==1.1.0
-hpack==3.0.0
-hyperframe==5.2.0
-hyperlink==20.0.1
-idna==2.10
-incremental==17.5.0
-jmespath==0.10.0
-msgpack==1.0.0
+Click==7.0
+cloudpickle==1.3.0
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+cryptography==2.8
+cupshelpers==1.0
+cycler==0.10.0
+dask==2.8.1+dfsg
+dbus-python==1.2.16
+decorator==4.4.2
+defer==1.0.6
+distlib==0.3.6
+distro==1.4.0
+distro-info===0.23ubuntu1
+Django==4.2.1
+djangorestframework==3.14.0
+docutils==0.16
+drf-writable-nested==0.7.0
+duplicity==0.8.12.0
+entrypoints==0.3
+et-xmlfile==1.0.1
+fasteners==0.14.1
+filelock==3.12.0
+freetype-py==2.1.0.post1
+fsspec==0.6.1
+future==0.18.2
+gevent==1.4.0
+gitdb2==2.0.6
+GitPython==3.0.7
+google-api-core==1.31.2
+google-api-python-client==2.17.0
+google-auth==2.0.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.53.0
+greenlet==0.4.15
+h5netcdf==0.7.1
+h5py==2.10.0
+html5lib==1.0.1
+httplib2==0.19.1
+idna==2.8
+importlib-metadata==1.5.0
+ipython==7.13.0
+ipython_genutils==0.2.0
+jdcal==1.0
+jedi==0.15.2
+jmespath==0.9.4
+json-tricks==3.11.0
+keyring==18.0.1
+kiwisolver==1.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+locket==0.2.0
+lockfile==0.12.2
+louis==3.12.0
+lxml==4.5.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==1.1.0
+matplotlib==3.1.2
+monotonic==1.5
+more-itertools==4.2.0
+mpi4py==3.0.3
+msgpack==0.6.2
+msgpack-numpy==0.4.4
+netCDF4==1.5.3
+netifaces==0.10.4
+numcodecs==0.0.0
+numexpr==2.7.1
+numpy==1.17.4
 oauthlib==3.1.0
-Pillow==7.2.0
-priority==1.3.0
-psycopg2==2.8.5
+olefile==0.46
+openpyxl==3.0.3
+packaging==20.3
+pandas==0.25.3
+paramiko==2.6.0
+parso==0.5.2
+partd==1.0.0
+pexpect==4.6.0
+pickleshare==0.7.5
+Pillow==7.0.0
+pipenv==2020.11.15
+platformdirs==3.5.1
+pluggy==0.13.0
+prompt-toolkit==2.0.10
+protobuf==3.17.3
+psutil==5.5.1
+PsychoPy==2020.1.3
+py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.20
-pydot==1.4.1
-PyHamcrest==2.0.2
+pycairo==1.16.2
+pycups==1.9.73
+pygame==1.9.6
+pyglet==1.4.10
+Pygments==2.3.1
+PyGObject==3.36.0
 PyJWT==1.7.1
-pyOpenSSL==19.1.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-python-environ==0.4.54
-python3-openid==3.2.0
-pytz==2020.1
-requests==2.24.0
-requests-oauthlib==1.3.0
-sendgrid==6.9.7
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyo==1.0.0
+PyOpenGL==3.1.0
+pyparsing==2.4.6
+pypng==0.0.20
+pyRFC3339==1.1
+pyserial==3.4
+pytest==4.6.9
+python-apt==2.0.1+ubuntu0.20.4.1
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+python-gitlab==2.0.1
+python-xlib==0.23
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+pyzmq==18.1.1
+questplus==2019.4
+reportlab==3.5.34
+requests==2.22.0
+requests-unixsocket==0.2.0
+roman==2.0.0
+rsa==4.0
 s3transfer==0.3.3
-service-identity==18.1.0
-six==1.15.0
-sqlparse==0.3.1
-toml==0.10.1
-txaio==20.4.1
-typing-extensions==3.7.4.3
-urllib3==1.25.10
-apiclient~=1.0.4
-
-
-google-api-python-client~=2.17.0
-
-oauth2client~=4.1.3
-uvicorn==0.11.8
-websockets==8.1
-whitenoise==5.2.0
-wsproto==0.15.0
-zope.interface==5.1.0
-drf-writable-nested==0.6.3
-python-slugify==5.0.2
-text-unidecode==1.3
+scipy==1.3.3
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+simplejson==3.16.0
+sip==4.19.21
+six==1.14.0
+smmap2==2.0.5
+SoundFile==0.10.3.post1
+soupsieve==1.9.5
+sqlparse==0.4.4
+ssh-import-id==5.10
+systemd-python==234
+tables==3.6.1
+toml==0.10.0
+toolz==0.9.0
+tox==3.13.2
+traitlets==4.3.3
+typing_extensions==4.6.3
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+uritemplate==3.0.1
+urllib3==1.25.8
+usb-creator==0.3.7
+virtualenv==20.0.17
+virtualenv-clone==0.5.4
+wadllib==1.3.3
+wcwidth==0.1.8
+webencodings==0.5.1
+wxPython==4.0.7
+xarray==0.15.0
+xkit==0.0.0
+xlrd==1.1.0
+xlwt==1.3.0
+zarr==0.0.0
+zipp==1.0.0
