--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,6 @@ jmespath==0.9.4
 json-tricks==3.11.0
 keyring==18.0.1
 kiwisolver==1.0.1
-language-selector
 launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
@@ -129,12 +128,14 @@ questplus==2019.4
 reportlab==3.5.34
 requests==2.22.0
 requests-unixsocket==0.2.0
+resolver==0.2.1
 roman==2.0.0
 rsa==4.0
 s3transfer==0.3.3
 scipy==1.3.3
 screen-resolution-extra==0.0.0
 SecretStorage==2.3.1
+selector==0.10.1
 simplejson==3.16.0
 sip==4.19.21
 six==1.14.0
@@ -161,7 +162,6 @@ virtualenv==20.0.17
 virtualenv-clone==0.5.4
 wadllib==1.3.3
 wcwidth==0.1.8
-language-selector
 webencodings==0.5.1
 wxPython==4.0.7
 xarray==0.15.0
