--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,6 @@ google-auth-httplib2==0.1.0
 googleapis-common-protos==1.53.0
 greenlet==0.4.15
 h5netcdf==0.7.1
-h5py==2.10.0
 html5lib==1.0.1
 httplib2==0.19.1
 idna==2.8
@@ -94,7 +93,7 @@ pluggy==0.13.0
 prompt-toolkit==2.0.10
 protobuf==3.17.3
 psutil==5.5.1
-PsychoPy==2020.1.3
+PsychoPy
 py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
