--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,40 @@
-
+s3transfer==0.3.3
+SecretStorage==2.3.1
+selector==0.10.1
+simplejson==3.16.0
+sip
+six==1.14.0
+smmap2==2.0.5
+SoundFile==0.10.3.post1
+soupsieve==1.9.5
+sqlparse==0.4.4
+ssh-import-id==5.10
+systemd-python==234
+tables==3.6.1
+toml==0.10.0
+toolz==0.9.0
+tox==3.13.2
+traitlets==4.3.3
+typing_extensions==4.6.3
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+uritemplate==3.0.1
+urllib3==1.25.8
+usb-creator==0.3.7
+virtualenv==20.0.17
+virtualenv-clone==0.5.4
+wadllib==1.3.3
+wcwidth==0.1.8
+webencodings==0.5.1
+wxPython==4.0.7
+xarray==0.15.0
+xkit==0.0.0
+xlrd==1.1.0
+xlwt==1.3.0
+zarr==0.0.0
+zipp==1.0.0
 pypng==0.0.20
 python-dateutil
 python-debian
@@ -113,7 +149,6 @@ PyNaCl==1.3.0
 pyo==1.0.0
 PyOpenGL==3.1.0
 pyparsing==2.4.6
-
 pytz==2019.3
 pyxdg==0.26
 PyYAML==5.3.1
@@ -125,40 +160,3 @@ requests-unixsocket==0.2.0
 resolver==0.2.1
 roman==2.0.0
 rsa==4.0
-s3transfer==0.3.3
-SecretStorage==2.3.1
-selector==0.10.1
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
-smmap2==2.0.5
-SoundFile==0.10.3.post1
-soupsieve==1.9.5
-sqlparse==0.4.4
-ssh-import-id==5.10
-systemd-python==234
-tables==3.6.1
-toml==0.10.0
-toolz==0.9.0
-tox==3.13.2
-traitlets==4.3.3
-typing_extensions==4.6.3
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-uritemplate==3.0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-virtualenv==20.0.17
-virtualenv-clone==0.5.4
-wadllib==1.3.3
-wcwidth==0.1.8
-webencodings==0.5.1
-wxPython==4.0.7
-xarray==0.15.0
-xkit==0.0.0
-xlrd==1.1.0
-xlwt==1.3.0
-zarr==0.0.0
-zipp==1.0.0
