--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.7.2
+dj-database-url==2.0.0
 Django==4.2.2
 django-cors-headers==4.1.0
+django-environ==0.10.0
+django-heroku==0.3.1
 djangorestframework==3.14.0
 drf-writable-nested==0.7.0
-environ==1.0
 Pillow==9.5.0
+psycopg2==2.9.6
 pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.6.3
-django_heroku
+whitenoise==6.5.0
