--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 asgiref==3.7.2
+click==8.1.3
 dj-database-url==2.0.0
 Django==4.2.2
 django-cors-headers==4.1.0
 django-environ==0.10.0
 djangorestframework==3.14.0
 drf-writable-nested==0.7.0
+h11==0.14.0
 Pillow==9.5.0
 psycopg2==2.9.6
 pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.6.3
+uvicorn==0.22.0
 whitenoise==6.5.0
