--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.2.2
 django-cors-headers==4.1.0
 django-environ==0.10.0
 django-heroku==0.3.1
+django-ipware==5.0.0
 djangorestframework==3.14.0
 drf-writable-nested==0.7.0
 h11==0.14.0
