--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-ipware==5.0.0
 djangorestframework==3.14.0
 drf-writable-nested==0.7.0
 h11==0.14.0
+openpyxl==3.1.2
 Pillow==9.5.0
 psycopg2==2.9.6
 pytz==2023.3
