--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==2.0.0
 Django==4.2.2
 django-cors-headers==4.1.0
 django-environ==0.10.0
+django-filter==23.3
 django-heroku==0.3.1
 django-ipware==5.0.0
 djangorestframework==3.14.0
