--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ openpyxl==3.1.2
 Pillow==9.5.0
 psycopg2==2.9.6
 pytz==2023.3
+reportlab==4.0.4
 sqlparse==0.4.4
 typing_extensions==4.6.3
 uvicorn==0.22.0
