--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Babel==2.12.1
 click==8.1.3
 dj-database-url==2.0.0
 Django==4.2.2
+django-colorfield==0.10.1
 django-cors-headers==4.1.0
 django-environ==0.10.0
 django-filter==23.3
