--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
 Babel==2.12.1
 beautifulsoup4==4.12.2
+boto3==1.34.30
+botocore==1.34.30
 click==8.1.3
 dj-database-url==2.0.0
 Django==4.2.2
@@ -10,12 +12,14 @@ django-environ==0.10.0
 django-filter==23.3
 django-heroku==0.3.1
 django-ipware==5.0.0
+django-storages==1.14.2
 djangorestframework==3.14.0
 drf-writable-nested==0.7.0
 h11==0.14.0
 openpyxl==3.1.2
 Pillow==9.5.0
 psycopg2==2.9.6
+python-decouple==3.8
 pytz==2023.3
 reportlab==4.0.4
 requests==2.31.0
