--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ reportlab==4.0.4
 requests==2.31.0
 sqlparse==0.4.4
 typing_extensions==4.6.3
+Unidecode==1.3.8
 uvicorn==0.22.0
 whitenoise==6.5.0
 shortuuid==1.0.11
