--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ version: '3.8'
 services:
   web:
     build: ./
-    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
+    restart: always
+    command: python manage.py runserver 0.0.0.0:8000 --settings=games.settings_docker
     volumes:
-      - ./:/usr/src/app/
+      - ./:/app/
     ports:
       - 8000:8000
     env_file:
